<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@color/colorPrimary"
            tools:context=".view.login.LoginActivity">

    <LinearLayout
        android:id="@+id/linear_layout_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            app:hintTextAppearance="@style/HintText">

            <com.antoniocappiello.cloudapp.view.widgets.EditTextWithClearIcon
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edit_text_password"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            app:hintTextAppearance="@style/HintText">

            <com.maksim88.passwordedittext.PasswordEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_enter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_sign_in_with_email_and_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginBottom="@dimen/lv_header_text_size"
            android:background="@color/colorAccent"
            android:text="@string/button_signin_with_password"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dont_have_account"
                style="@style/LoginCreateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dont_have_account" />

            <TextView
                android:id="@+id/text_view_sign_up"
                style="@style/LoginCreateTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_create_account" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>